--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon"  href="./src/assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#2b9de6"/>
+    <meta name="description"
+          content="tequeños venezolanos"
+    />
     <title>Tequeños Venezolanos</title>
   </head>
   <body>
