--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon"  href="./src/assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#2b9de6"/>
+    <meta name="theme-color" content="#FFC107"/>
     <meta name="description"
-          content="tequeños venezolanos"
+          content="Sabores de Venezuela"
     />
-    <title>Tequeños Venezolanos</title>
+    <title>Sabores de Venezuela</title>
   </head>
   <body>
     <div id="root"></div>
