--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./src/assets/logo.svg" />
+    <link rel="icon" href="./src/assets/logonew.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#FFC107" />
     <meta name="description" content="Sabores de Venezuela" />
